--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,18 @@
   box-sizing: border-box;
 }
 
+html {
+  @apply bg-white dark:bg-[#1D232A];
+}
+
 body,
 #root {
   display: contents;
 }
 
 .active {
-  color: #f48c06;
-  border-bottom: 1px solid #2f327d;
+  color: #f48c06 !important;
+  @apply border-b border-solid border-[#2f327d] dark:border-white;
   border-bottom-width: 4px;
 }
 
@@ -39,14 +43,13 @@ body,
 }
 
 .backdrop {
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 242, 225, 0.6);
-  cursor: pointer;
-  z-index: 1;
+  /* background: rgba(255, 242, 225, 0.6); */
+  position: fixed;
+  z-index: 10;
 }
 
 /* Responsive Design Tablets */
@@ -71,7 +74,7 @@ body,
 }
 
 #icon {
-  stroke: #2f327d;
+  @apply stroke-[#2f327d] dark:stroke-neutral-300;
   fill-opacity: 0;
   stroke-width: 1px;
   stroke-dasharray: 4500;
