--- a/src/App.css
+++ b/src/App.css
@@ -45,11 +45,22 @@ body,
 .backdrop {
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  /* background: rgba(255, 242, 225, 0.6); */
+  bottom: 0;
+  right: 0;
   position: fixed;
+  /* width: 100%; */
+  /* height: 100%; */
+  background-color: rgba(0, 0, 0, 0.4);
   z-index: 10;
+  overflow-y: auto;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.show {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 /* Responsive Design Tablets */
@@ -102,4 +113,131 @@ body,
   /* background-image: url() no-repeat; */
   height: 90vh;
   background-attachment: fixed;
+}
+
+/*todo -----HANKO LOGIN---------- */
+/*todo -----CUSTOM STYLING-------- */
+
+hanko-auth::part(form-item) {
+  min-width: 100%;
+}
+
+hanko-auth::part(container) {
+  background-color: transparent;
+  max-width: 400px;
+}
+
+.hankoComponent::part(input) {
+  @apply bg-transparent text-nav-blue dark:text-white;
+  padding: 32px 0px 25px 10px;
+  border-radius: 4px 4px 0px 0px;
+  font-family: "Nunito Sans", "sans-serif";
+  display: flex;
+  height: 40px;
+  /* padding-right: 0px; */
+  border: 0;
+  outline: none;
+  transition: border-color 0.3s ease;
+  box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px inset;
+}
+
+.hankoComponent::part(input):focus {
+  border: 1px solid transparent;
+  border-image: linear-gradient(90deg, #a9a5fd 0%, #ebd75d 101.62%);
+  border-image-slice: 1;
+}
+
+.hankoComponent::part(primary-button) {
+  padding: 0px 32px;
+  height: 57px;
+  border-radius: 4px 4px 0px 0px;
+  border: 0;
+  color: #252641;
+  text-align: center;
+  font-family: "Nunito Sans", "sans-serif";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+  background: linear-gradient(90deg, #a9a5fd 0%, #ebd75d 101.62%);
+  transition: all 0.3s ease;
+}
+
+.hankoComponent::part(primary-button):hover {
+  background: transparent;
+  border: 1px solid transparent;
+  border-image: linear-gradient(90deg, #a9a5fd 0%, #ebd75d 101.62%);
+  border-image-slice: 1;
+  color: #fff;
+}
+
+.hankoComponent::part(headline1) {
+  @apply text-nav-blue dark:text-white;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+  font-family: "Nunito Sans", sans-serif;
+  margin-bottom: 25px;
+}
+
+.hankoComponent::part(paragraph) {
+  @apply text-nav-blue dark:text-white;
+  text-align: center;
+}
+
+/* PassKey Button Style */
+.hankoComponent::part(secondary-button) {
+  padding: 0px 32px;
+  height: 57px;
+  border-radius: 4px 4px 0px 0px;
+  border: 0;
+  color: #252641;
+  font-family: "Nunito Sans", "sans-serif";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+  transition: all 0.3s ease;
+  box-shadow: rgba(15, 15, 15, 0.1) 0px 0px 0px 1px inset;
+}
+
+.hankoComponent::part(secondary-button):hover {
+  /* background: #fff; */
+  border: 1px solid transparent;
+  border-image: linear-gradient(90deg, #a9a5fd 0%, #ebd75d 101.62%);
+  border-image-slice: 1;
+}
+
+.hankoComponent::part(divider-line) {
+  background: #b2b3cf;
+  margin: 0 5px;
+  /* display: none; */
+}
+
+.hankoComponent::part(divider) {
+  margin: 30px 0;
+}
+
+.hankoComponent::part(divider-text) {
+  @apply text-nav-blue dark:text-white;
+  font-size: 20px;
+  background-color: transparent;
+  text-transform: uppercase;
+  font-family: "Unica One", sans-serif;
+  font-weight: 700;
+}
+
+.hankoComponent::part(text-input) {
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.hankoComponent::part(passcode-input) {
+  font-family: "Unica One", sans-serif;
+  padding-right: auto;
+  font-weight: 900;
+  font-size: 25px;
 }
